<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_SignUp"
    android:background="@color/colorBackground">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="20dp"
        >
        <Button
            android:id="@+id/SignUp_BTN_back"
            android:layout_width="30dp"
            android:layout_height="40dp"
            android:background="@drawable/back"
            android:layout_gravity="left"
            android:layout_marginBottom="30dp"
            />

        <EditText
            android:id="@+id/SignUp_EDT_full_name"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/full_name"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="20dp"
            />

        <EditText
            android:id="@+id/SignUp_EDT_email"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/email2"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="20dp"
            />

        <EditText
            android:id="@+id/SignUp_EDT_phone"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/phone_number2"
            android:inputType="textPhonetic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="20dp"
            />

        <EditText
            android:id="@+id/SignUp_EDT_password"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/password2"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="20dp"
            />
        <EditText

            android:id="@+id/SignUp_EDT_password_confirm"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/confirmation_password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginBottom="40dp"
            />

        <Button
            android:id="@+id/SignUp_BTN_SignUp"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:textColor="#ffffff"
            android:textSize="20dp"
            android:background="@drawable/mybtn"
            android:layout_marginBottom="30dp"
            android:text="@string/sign_up"
            />


        <TextView
            android:id="@+id/SignUp_TXT_logIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account_log_in"
            android:textColor="@color/colorDarkText"
            />

        <ProgressBar
            android:id="@+id/SignUp_PRBR_progressBar"
            style="@style/Widget.AppCompat.ProgressBar"
            android:layout_width="70dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:progressTint="#EFC957"
            android:visibility="invisible"/>
    </LinearLayout>

    <ImageView
        android:id="@+id/LogIn_IMG_logo"
        android:layout_width="94dp"
        android:layout_height="136dp"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/cocktail"
        android:rotation="@integer/google_play_services_version"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>