<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Main"
    android:background="@color/colorBackground">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="30dp"
        >

        <androidx.cardview.widget.CardView
            android:id="@+id/Main_Card_user"
            android:layout_width="370dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            app:cardElevation="8dp"
            app:cardCornerRadius="8dp"
            >
            <ImageView
                android:id="@+id/Main_IMG_logo"
                android:layout_width="80dp"
                android:layout_height="90dp"
                android:layout_gravity="bottom|right"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                app:srcCompat="@drawable/cocktail"
                android:rotation="@integer/google_play_services_version"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:id="@+id/Main_TXT_Welcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|bottom"
                android:layout_marginBottom="10dp"
                android:text="@string/welcome"
                android:textSize="40dp"
                android:textColor="@color/colorDarkText"/>

            <TextView
                android:id="@+id/Main_TXT_MyProile"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/my_profile"
                android:textSize="20dp"
                android:textColor="@color/colorDarkText"/>
        </LinearLayout>
    </androidx.cardview.widget.CardView>



        <TableLayout
            android:layout_width="373dp"
            android:layout_height="371dp"
            android:padding="5dp">

            <TableRow
                android:gravity="center"
                android:padding="10dp"
                android:layout_height="185dp"
                >
                <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/mybtnyellow"
                    android:layout_marginRight="20dp"
                    >
                <Button
                    android:id="@+id/Main_BTN_My_Orders"
                    android:layout_width="150dp"
                    android:layout_height="130dp"
                    android:background="@drawable/order_history"
                    android:textColor="#CC3636"
                    android:textSize="20dp"
                    />

                    <TextView
                        android:text="@string/orders_history"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:textColor="#CC3636"
                        android:textSize="15dp"
                        />
                </LinearLayout>
                <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/mybtnyellow"
                    >
                <Button
                    android:id="@+id/Main_BTN_My_cards"
                    android:layout_width="150dp"
                    android:layout_height="130dp"
                    android:background="@drawable/cards"
                    android:textColor="#CC3636"
                    android:textSize="20dp" />
                    <TextView
                        android:text="@string/cards"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:textColor="#CC3636"
                        android:textSize="15dp"
                        />
                </LinearLayout>
            </TableRow>


            <TableRow
                android:layout_height="185dp"
                android:layout_marginBottom="5dp"
                android:gravity="center"
                android:padding="10dp">
                <LinearLayout
                    android:orientation="vertical"
                    android:background="@drawable/mybtnyellow"
                    android:layout_marginRight="20dp"
                    >

                <Button
                    android:id="@+id/Main_BTN_Daily_deals"
                    android:layout_width="150dp"
                    android:layout_height="130dp"
                    android:background="@drawable/beer"
                    android:textColor="#CC3636"
                    android:textSize="20dp" />
                    <TextView
                        android:text="@string/our_deals"
                        android:gravity="center"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:textColor="#CC3636"
                        android:textSize="15dp"
                        />
                </LinearLayout>


                <LinearLayout
                android:orientation="vertical"
                android:background="@drawable/mybtnyellow">

                <Button
                    android:id="@+id/Main_BTN_Menu"
                    android:layout_width="150dp"
                    android:layout_height="130dp"
                    android:background="@drawable/menu"
                    android:textColor="#CC3636"
                    android:textSize="20dp" />
                <TextView
                    android:text="@string/menu"
                    android:gravity="center"
                    android:layout_height="match_parent"
                    android:layout_width="match_parent"
                    android:textColor="#CC3636"
                    android:textSize="15dp"
                    />
                </LinearLayout>

            </TableRow>

        </TableLayout>

        <Button
            android:id="@+id/Main_BTN_LogOut"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:background="@drawable/mybtn"
            android:layout_marginTop="20dp"
            android:text="@string/log_out"
            />


    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>